tests/spec/fail/list_has_type_mismatch.aja
nums = [1]
print(nums.has("1"))
